--- a/style.css
+++ b/style.css
@@ -5,14 +5,16 @@ main {
   font-family: 'Poppins', sans-serif;
 }
 main > h1 {
-  font-size:40px;
+  font-size:80px;
   color:#000;
   font-weight: bold;
   margin-top:40px;
+  text-align:center;
 }
 main > h2 {
-  font-size:20px;
+  font-size:50px;
   color:#000;
+  text-align:center;
 }
 #calculator {
   margin: 0;
