--- a/style.css
+++ b/style.css
@@ -4,14 +4,14 @@ main {
   background-color:#fff;
   font-family: 'Poppins', sans-serif;
 }
-main > h1 {
+h1 {
   font-size:80px;
   color:#000;
   font-weight: bold;
   margin-top:40px;
   text-align:center;
 }
-main > h2 {
+h2 {
   font-size:50px;
   color:#000;
   text-align:center;
