--- a/style.css
+++ b/style.css
@@ -5,16 +5,17 @@ main {
   font-family: 'Poppins', sans-serif;
 }
 h1 {
-  font-size:80px;
+  font-size:50px;
   color:#000;
   font-weight: bold;
   margin-top:40px;
   text-align:center;
 }
 h2 {
-  font-size:50px;
+  font-size:25px;
   color:#000;
   text-align:center;
+  margin-top:10px;
 }
 #calculator {
   margin: 0;
