--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ h2 {
   text-align:center;
   margin-top:10px;
 }
+a {
+  color:inherit;
+  text-decoration:none;
+}
 #calculator {
   margin: 0;
   position: absolute;
